infra/k3s_migration/infra-live/applications/observability/visualization/grafana/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana
  namespace: grafana

spec:
  ingressClassName: nginx

  rules:
    - host: grafana.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
